# waybar-syncthing

./: Cargo.toml  flake.nix
.github/workflows/: release.yml
src/: api_client.rs  args.rs  main.rs  runner.rs
