[package]
name = "waybar-syncthing"
version = "1.0.0"
edition = "2021"
license = "ISC"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4.22"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
